--- a/project/homework/assets/styles/body.css
+++ b/project/homework/assets/styles/body.css
@@ -1,10 +1,9 @@
-
 h1{
 	text-align: center;
-	font-size: 24.5px;
+	font-size: 48px;
 	margin-top: calc(106px - 0.67em);
 	font-family: 'Raleway', sans-serif;
-
+	color:#333333;
 }
 
 h1:after{
@@ -23,7 +22,8 @@ h1+.content{
 .content{
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
-	font-size: 9px;
+	font-size: 19px;
+	color:#8e8f92;
 }
 
 .wrap-section{
@@ -33,4 +33,29 @@ h1+.content{
 .inner-section{
 	float: left;
 	width: 33.33%;
+	margin-top: 83px;
+	padding: 0 7px;
+	box-sizing: border-box;
+}
+
+.icon{
+	height: 70px;
+	width: 70px;
+	border:2px solid #ff8b38;
+	border-radius: 50%;
+	margin: 0 auto;
+}
+
+.inner-title{
+	margin: 35px 0;
+	text-align: center;
+	color:#333333;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 26px;
+}
+
+.clearfix:after {
+  content: "";
+  display: block;
+  clear: both;
 }
