--- a/project/homework/assets/styles/main.css
+++ b/project/homework/assets/styles/main.css
@@ -11,14 +11,14 @@ h1::after {
 	display: block;
 	margin:31px auto 0;
 	height: 2px;	
-	width: 64px;
+	width: 65px;
 	background: #ff8c2c;
 }
 
 .content {
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
-	font-size: 19px;
+	font-size: 14px;
 	color:#8e8f92;
 }
 
@@ -54,4 +54,69 @@ h1::after {
 	content: "";
 	display: block;
 	clear: both;
+}
+
+/*********************PRICING OPTION**************/
+
+.wrap-pricing {
+	background: #f5f5f5;
+	margin-top: 87px;
+	padding-top: 110px;
+	box-sizing: border-box;
+}
+
+.pricing {
+	text-align: center;
+	font-size: 36px;
+	font-family: 'Raleway', sans-serif;
+	color:#333333;	
+	margin: 0 0 35px 0;
+}
+
+.pricing::after {
+	content:"";
+	display: block;
+	margin:31px auto 0;
+	height: 2px;	
+	width: 65px;
+	background: #ff8c2c;
+}
+
+.inner-menu {
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
+}
+
+li {
+	list-style-type: none;
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+	font-size: 14px;
+	color:#8e8f92;
+	box-sizing: content-box;
+	padding: 15px 20px;
+	margin-top:1px; 
+}
+
+li:nth-of-type(n+4) {
+	background: #fff;
+	text-transform: uppercase;
+}
+
+li:nth-of-type(-n+3) {
+	background: #333333;
+	color:#fff;
+	padding-top: 20px;
+	padding-bottom:  20px;
+}
+.professional li:nth-of-type(4) {
+	background: #ff8b38;
+	color:#fff;
+	margin-top: 0;
+}
+
+.basic li:nth-of-type(4) {
+	border-top:5px solid #ff8b38;
+	margin-top: 0;
 }
