--- a/project/homework/assets/styles/fonts.css
+++ b/project/homework/assets/styles/fonts.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:100,200,300,400&display=swap&subset=latin-ext');
