--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -1,15 +1,24 @@
-h1 {
-	text-align: center;
-	font-size: 48px;
-	margin-top: 106px;
-	font-family: 'Raleway', sans-serif;
-	color:#333333;
+.wrap-content {
+	margin: 0 auto;
+	max-width: 1100px;
 }
 
-h1::after {
+.wrap-awesome-padding {
+	padding-top: 100px;
+	padding-bottom: 105px;
+}
+.title-awesome {
+	text-align: center;
+	font-size: 48px;
+	font-family: 'Raleway', sans-serif;
+	color:#333333;
+	margin: 0;
+}
+
+.title-awesome::after {
 	content:"";
 	display: block;
-	margin:31px auto 0;
+	margin:31px auto 35px;
 	height: 2px;	
 	width: 65px;
 	background: #ff8c2c;
@@ -20,6 +29,7 @@ h1::after {
 	text-align: center;
 	font-size: 14px;
 	color:#8e8f92;
+	line-height: 1.42;
 }
 
 .wrap-section {
@@ -28,10 +38,14 @@ h1::after {
 
 .inner-section {
 	float: left;
-	width: 33.33%;
+	width: 30%;
 	margin-top: 83px;
-	padding: 0 7px;
 	box-sizing: border-box;
+}
+
+.section-crafted {
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 .icon {
@@ -40,6 +54,11 @@ h1::after {
 	border:2px solid #ff8b38;
 	border-radius: 50%;
 	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: #ff8b38;
+	font-size: 28px;
 }
 
 .inner-title {
@@ -60,9 +79,12 @@ h1::after {
 
 .wrap-pricing {
 	background: #f5f5f5;
-	margin-top: 87px;
+}
+
+.wrap-pricing-padding{
+	max-width: 1100px;
 	padding-top: 110px;
-	box-sizing: border-box;
+	margin: 0 auto;
 }
 
 .pricing {
@@ -82,14 +104,86 @@ h1::after {
 	background: #ff8c2c;
 }
 
+
 .inner-menu {
 	display: flex;
 	justify-content: center;
 	align-items: flex-end;
+	padding-top: 66px;
 }
 
-.inner-menu li {
-	list-style-type: none;
+.paragraph-conteiner {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+}
+
+.menu li {
+	list-style: none;
+	text-align: center;
+}
+
+.menu {
+	padding: 0;
+}
+
+.inner-menu-section {
+	width: 30%;
+}
+
+.paragraph-professional-section {
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+.paragraph-color {
+	background: #333;
+	margin-top: 2px;
+	color:#fff;
+	font-family: 'Raleway', sans-serif;
+	font-weight: bold;
+	box-sizing: padding-box;
+}
+
+.price {
+	padding-top: 24px;
+	padding-bottom: 24px;
+	font-size: 20px;
+}
+
+.value {
+	padding-top: 23px;
+	padding-bottom: 10px;
+	font-size: 94px;
+}
+
+.value span {
+	vertical-align: sub;
+	font-size: 35px;
+}
+
+.comment {
+	color:#86878b;
+	font-style: italic;
+	padding-top: 10px;
+	padding-bottom: 20px;
+}
+
+.paragraph-basic-section .comment {
+	border-bottom: 5px solid #ff8b38;
+}
+
+.orange-comment {
+	background: #ff8b38;
+	margin-top: 0;
+	padding-top: 14px;
+	padding-bottom: 16px;
+}
+
+.menu {
+	margin-top: 2px;
+}
+.menu li {
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 	font-size: 14px;
@@ -97,60 +191,19 @@ h1::after {
 	box-sizing: content-box;
 	padding: 15px 20px;
 	margin-top:1px; 
-}
-
-.inner-menu li:nth-of-type(n+4) {
 	background: #fff;
 	text-transform: uppercase;
-}
-
-.inner-menu li:nth-of-type(-n+3) {
-	background: #333333;
-	color:#fff;
-	padding-top: 20px;
-	padding-bottom:  20px;
-}
-
-.professional li:nth-of-type(4) {
-	background: #ff8b38;
-	color:#fff;
-	margin-top: 0;
-}
-
-.basic li:nth-of-type(4) {
-	border-top:5px solid #ff8b38;
-	margin-top: 0;
-}
-
-.inner-menu li:nth-of-type(3) {
-	color:#86878b;
-	font-style: italic;
-}
-
-.inner-menu li:nth-of-type(2) {
-	font-family: 'Raleway', sans-serif; 
-	font-size: 50px;
-	font-weight: bold;
-	padding-bottom: 0px;
-}
-
-.inner-menu li span {
-	vertical-align: sub;
-	font-size: 30px;
 }
 
 /**************************STILISH AXURE DESIGN********/
 
 .wrap-stylish {	
 	background-size: cover;
-	background: url(../images/stylish.jpg) no-repeat;
-	background-position: center;
+	background: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/stylish.jpg) no-repeat center;
 }
 
-.wrap-stylish-opacity {
-	background: rgba(0, 0, 0, .4);
-	padding-bottom: 38px;
-	background-size: cover;
+.inner-stylish {
+	padding-bottom: 35px;
 }
 
 .stylish {
@@ -171,16 +224,24 @@ h1::after {
 	background: #fff;
 }
 
+button{
+	padding: 0;
+	border: none;
+	font: inherit;
+	color: inherit;
+	background-color: transparent;
+}
+
 .download {
 	display: block;
-	width: 120px;
+	width: 135px;
 	margin: 35px auto 0;
 	text-align: center;
 	text-decoration: none;
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
 	border: 2px solid #fff;
-	padding: 15px 30px;
+	padding: 14px;
 }
 
 /***********************FOOTER****************/
@@ -198,8 +259,6 @@ h1::after {
 .inner-footer-icons {
 	width: 10px;
 	height: 10px;
-	border: 1px solid #fff;
-	border-radius: 50%;
 	margin-left: 30px;
 	margin-bottom: 15px;
 }
@@ -211,4 +270,8 @@ h1::after {
 	padding-bottom: 15px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 12px;
+}
+
+.inner-footer-icons {
+	color: #fff;
 }
