--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -1,12 +1,10 @@
 .wrap-content {
 	margin: 0 auto;
 	max-width: 1100px;
-}
-
-.wrap-awesome-padding {
 	padding-top: 100px;
 	padding-bottom: 105px;
 }
+
 .title-awesome {
 	text-align: center;
 	font-size: 48px;
@@ -34,13 +32,13 @@
 }
 
 .wrap-section {
-	margin: 0 10%;
+	padding-top: 83px;
 }
 
 .inner-section {
 	float: left;
 	width: 30%;
-	margin-top: 83px;
+	
 	box-sizing: border-box;
 }
 
@@ -85,6 +83,7 @@
 .wrap-pricing-padding{
 	max-width: 1100px;
 	padding-top: 110px;
+	padding-bottom: 95px;
 	margin: 0 auto;
 }
 
@@ -188,8 +187,8 @@
 /**************************STILISH AXURE DESIGN********/
 
 .wrap-stylish {	
-	background-size: cover;
 	background: linear-gradient(to top, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/stylish.jpg) no-repeat center;
+	background-size: cover;
 }
 
 .inner-stylish {
@@ -237,7 +236,10 @@ button{
 }
 
 .wrap-footer-icons {
+	max-width: 1100px;
+	margin: 0 auto;
 	padding-top: 35px;
+	padding-bottom: 15px;
 	text-align: center;
 }
 
@@ -254,7 +256,7 @@ button{
 	margin: 0;
 	padding-top: 15px;
 	text-align: center;
-	padding-bottom: 15px;
+	
 	font-family: 'Open Sans', sans-serif;
 	font-size: 12px;
 }
