--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -11,6 +11,7 @@
 	max-width: 1100px;
 	margin: 0 auto;
 	padding-top: 110px;
+	padding-bottom: 140px;
 }
 
 .inner-navbar {
@@ -32,6 +33,7 @@
 	justify-content: center;
 	margin-left: auto;
 }
+
 .list-navbar {
 	margin: 0;
 	padding: 0;
@@ -51,7 +53,7 @@
 }
 
 .wrap-header-content {
-	max-width: 435px;
+	max-width: 480px;
 }
 
 .logo-content {
@@ -64,6 +66,66 @@ font-family: 'Raleway', sans-serif;
 color: #fff;
 line-height: 1.2;
 font-size: 36px;
+}
+
+.modern-title::after {
+	content: "";
+	display: block;
+	height: 2px;	
+	width: 65px;
+	margin: 40px 0;
+	background: #fff;
+}
+
+.content-light {
+	font-weight: 300;
+}
+
+.wrap-header-content .header-download {
+	margin-left: 0;
+	margin-top: 45px;
+}
+
+.wrap-social-media {
+	box-shadow: 3px 0 7px rgba(0, 0, 0, .35);
+}
+
+.inner-social-media {
+	padding-top: 45px;
+	padding-bottom: 25px;
+	display: flex;
+}
+
+.social-media-icons {
+	display: flex;
+	align-items: center;
+	margin-left: auto;
+}
+
+.social-title {
+	margin: 0;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	font-size: 20px;
+	color: #333;
+}
+
+.social-media-content {
+	max-width: 320px;
+}
+
+.social-media-content p {
+	text-align: left;
+}
+
+.inner-icons {
+	width: 45px;
+	height: 45px;
+	margin-left: 30px;
+	margin-bottom: 15px;
+	text-decoration: none;
+	color: #ccc;
+	font-size: 48px;
 }
 
 /**********************AWESOME********/
