Макет все блоки

--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -315,6 +315,99 @@ font-size: 36px;
 	text-transform: uppercase;
 }
 
+/****************CUSTOMERS**********************/
+
+.wrap-customers {
+	max-width: 1100px;
+	padding-top: 107px;
+	padding-bottom: 100px;
+	margin: 0 auto;
+}
+
+.inner-title-customers {
+	font-size: 36px;
+	line-height: 1.2;
+	font-family: 'Raleway', sans-serif;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.inner-customers p {
+	margin: 0;
+}
+
+.wrap-reviews {
+	padding-top: 57px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.inner-reviews {
+	width: 30%;
+}
+
+.reviews {
+	background: #f5f5f5;
+	padding-top: 27px;
+	padding-bottom: 5px;
+	padding-left: 12px;
+	padding-right: 40px;
+	border-radius: 5px;
+}
+
+.reviews p {
+	margin: 0;
+	text-align: left;
+}
+
+.reviews::after {
+	content: "";
+	display: block;
+	width: 0;
+	height: 0;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-top: 20px solid #f5f5f5;
+	position: relative;
+	top: 25px;
+	margin-left: 10px;
+}
+
+.castomers {
+	padding-top: 25px;
+	display: flex;
+}
+
+.img-customers {
+	width: 70px;
+	height: 70px;
+}
+
+.name-specialty {
+display: flex;
+flex-direction: column;
+justify-content: center;
+margin-left: 15px;
+}
+
+.name-specialty p {
+	margin: 0;
+}
+
+.name {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	font-size: 20px;
+	padding-bottom: 12px;
+	color: #333333;
+}
+
+.specialty {
+	font-family: 'Open Sans', sans-serif;
+	color: #86878b;
+	font-size: 14px;
+}
+
 /**************************STILISH AXURE DESIGN********/
 
 .wrap-stylish {	
