--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -128,6 +128,89 @@ font-size: 36px;
 	font-size: 48px;
 }
 
+/*********TABS-EFFECT************/
+
+.section-tabs {
+	background: #f5f5f5;
+}
+
+.wrap-tabs {
+	max-width: 1100px;
+	margin: 0 auto;
+	padding-top: 145px;
+	padding-bottom: 115px;
+	display: flex;
+}
+
+.tabs {
+	background: #333333;
+	width: 110px;
+	height: 110px;
+	margin-bottom: 2px;
+	color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
+	box-shadow: 0 3px 7px rgba(0, 0, 0, .35);
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.tabs-orange {
+	background: #ff8b38;
+}
+
+.tabs:first-child {
+	background: #ff8b38;
+	border-radius: 4px 4px 0 0;
+}
+
+.tabs:last-child {
+	border-radius: 0 0 4px 4px;
+}
+
+.wrap-tabs-effect {
+	display: flex;
+	padding-left: 100px;
+}
+
+.inner-effect {
+	padding-right: 122px;
+}
+
+.inner-effect h2 {
+	margin: 13px 0 60px;
+	text-align: left;
+}
+
+.inner-effect p {
+	text-align: left;
+	margin-top: 0;
+}
+
+.download-effect {
+	display: block;
+	width: 135px;
+	margin-top: 50px;
+	text-align: center;
+	text-decoration: none;
+	font-family: 'Open Sans', sans-serif;
+	color: #fff;
+	border-radius: 4px;
+	padding: 14px;
+	background: #ff8b38;
+}
+
+
+
+
+
+
+
+
+
+
 /**********************AWESOME********/
 .wrap-content {
 	margin: 0 auto;
