Поправка недочетов с отступами

--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -497,12 +497,12 @@
 }
 
 .inner-stylish {
-	padding-bottom: 35px;
+	padding-top: 70px;
+	padding-bottom: 60px;
 }
 
 .stylish {
 	margin-top: 0px;
-	padding: 70px 0 0 0;
 	text-align: center;
 	color: #fff;
 	font-family: 'Raleway', sans-serif;
