--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -65,6 +65,7 @@
 
 .wrap-header-content {
 	max-width: 515px;
+	float: left;
 }
 
 .logo-content {
@@ -102,12 +103,77 @@
 	margin-top: 45px;
 }
 
+.form-head {
+	width: 360px;
+	float: right;
+}
+
+.form-title {
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 300;
+	font-size: 20px;
+	background: #f5f5f5;
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-top: 18px;
+	padding-bottom: 18px;
+	padding-left: 53px;
+	border-radius: 4px 4px 0 0 ;
+	color: #333333;
+}
+
+.color-text {
+	color: #ff8b38;
+}
+
+.form-input {
+	padding-top: 48px;
+	padding-left: 48px;
+	padding-right: 48px;
+	text-align: center;
+	background: #fff;
+}
+
+.input input {
+	width: 100%;
+	border-top: 0;
+	border-left: 0;
+	border-right: 0;
+	border-bottom: 2px solid #d6d6d6;
+	font-size: 14px;
+	margin-bottom: 48px;
+	padding-bottom: 10px;
+	padding-right: 13px;
+	padding-left: 13px;
+	outline: none;
+}
+
+.form-input input::placeholder {
+	font-size: 14px;
+	font-family: 'Open Sans', sans-serif;
+}
+
+.form-button {
+	padding-top: 22px;
+	padding-bottom: 22px;
+	text-align: center;
+	color: #fff;
+	background: #ff9b51;
+	border-radius: 0 0 4px 4px;
+	width: 100%;
+}
+
+.form-button:hover {
+	cursor: pointer;
+}
+
 .wrap-social-media {
 	box-shadow: 3px 0 7px rgba(0, 0, 0, .35);
 }
 
 .social-media-content {
 	float: left;
+	max-width: 361px;
 }
 
 .inner-social-media {
@@ -126,10 +192,6 @@
 	font-weight: 700;
 	font-size: 20px;
 	color: #333;
-}
-
-.social-media-content {
-	max-width: 320px;
 }
 
 .social-media-content p {
@@ -222,8 +284,11 @@
 	background: #ff8b38;
 }
 
-.img-effect {
+.inner-img-effect {
 	float: right;
+}
+
+.img-effect {
 	width: 320px;
 	height: 253px;
 }
@@ -313,7 +378,7 @@
 	padding-bottom: 95px;
 }
 
-.pricing {
+.title-h2 {
 	text-align: center;
 	font-size: 36px;
 	font-family: 'Raleway', sans-serif;
@@ -550,6 +615,62 @@ button {
 	color: #fff;
 	border: 2px solid #fff;
 	padding: 10px;
+}
+
+/******************CONTACT-US*************/
+
+.section-contacts {
+	padding-top: 100px;
+	padding-bottom: 85px;
+}
+
+.wrap-form-contacts {
+	padding-top: 88px;
+}
+
+.form-contact-us {
+	float: left;
+	width: 45%;
+}
+
+.form-messenger {
+	float: right;
+	width: 45%;
+}
+
+.inner-form-input .form-input {
+	padding-left: 0;
+	padding-right: 0;
+	padding-top: 0;
+}
+
+.form-messenger textarea {
+	resize: none;
+	width: 100%;
+	border-top: 0;
+	border-left: 0;
+	border-right: 0;
+	border-bottom: 2px solid #d6d6d6
+	/*outline: none;*/
+}
+
+.contact-button {
+	display: block;
+	margin: 42px auto;
+	width: 145px;
+	color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	background: #ff9b51;
+	font-weight: 700;
+	padding: 17px 23px;
+	box-sizing: content-box;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.form-messenger textarea::placeholder {
+	font-size: 14px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 /***********************FOOTER****************/
