--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -94,8 +94,7 @@
 .wrap-header-content .content-light {
 	font-weight: 300;
 	text-align: left;
-	padding-left: 2px;	
-	padding-right: 65px;	
+	padding-left: 2px;		
 }
 
 .wrap-header-content .header-download {
@@ -158,6 +157,8 @@
 	padding-bottom: 22px;
 	text-align: center;
 	color: #fff;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 700;
 	background: #ff9b51;
 	border-radius: 0 0 4px 4px;
 	width: 100%;
@@ -168,6 +169,8 @@
 }
 
 .wrap-social-media {
+	position: relative;
+	z-index: 1;
 	box-shadow: 3px 0 7px rgba(0, 0, 0, .35);
 }
 
@@ -182,6 +185,7 @@
 }
 
 .social-media-icons {
+	max-width: 620px;
 	float: right;
 	padding-top: 20px;
 }
@@ -650,8 +654,8 @@ button {
 	border-top: 0;
 	border-left: 0;
 	border-right: 0;
-	border-bottom: 2px solid #d6d6d6
-	/*outline: none;*/
+	border-bottom: 2px solid #d6d6d6;
+	outline: none;
 }
 
 .contact-button {
@@ -688,7 +692,8 @@ button {
 .inner-footer-icons {
 	width: 10px;
 	height: 10px;
-	margin-left: 30px;
+	margin-left: 15px;
+	margin-right: 15px;
 	margin-bottom: 15px;
 	text-decoration: none;
 	color: #fff;
