--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -241,10 +241,6 @@
 	text-align: center;
 }
 
-.tabs-orange {
-	background: #ff8b38;
-}
-
 .tabs:first-child {
 	background: #ff8b38;
 	border-radius: 4px 4px 0 0;
@@ -261,7 +257,6 @@
 .inner-effect {
 	float: left;
 	max-width: 476px;
-	padding-right: 94px;
 	margin-right: 0;
 }
 
@@ -315,7 +310,7 @@
 .after-title::after {
 	content:"";
 	display: block;
-	margin:31px auto 35px;
+	margin:25px auto 35px;
 	height: 2px;	
 	width: 65px;
 	background: #ff8c2c;
@@ -436,12 +431,12 @@
 
 .value {
 	padding-top: 23px;
-	padding-bottom: 10px;
+	padding-bottom: 2px;
 	font-size: 94px;
+	line-height: 1;
 }
 
 .value span {
-	vertical-align: sub;
 	font-size: 35px;
 }
 
@@ -522,8 +517,9 @@
 
 .reviews {
 	background: #f5f5f5;
-	padding: 27px 12px 5px;
+	padding: 20px 12px 20px;
 	border-radius: 5px;
+	position: relative;
 }
 
 .reviews p {
@@ -533,15 +529,14 @@
 
 .reviews::after {
 	content: "";
-	display: block;
+	position: absolute;
 	width: 0;
 	height: 0;
-	border-left: 15px solid transparent;
-	border-right: 15px solid transparent;
+	border-left: 13px solid transparent;
+	border-right: 13px solid transparent;
 	border-top: 20px solid #f5f5f5;
-	position: relative;
-	top: 25px;
-	margin-left: 10px;
+	top: 100%;
+	left: 30px;
 }
 
 .customers {
@@ -629,7 +624,7 @@ button {
 }
 
 .wrap-form-contacts {
-	padding-top: 88px;
+	padding-top: 55px;
 }
 
 .form-contact-us {
@@ -642,14 +637,37 @@ button {
 	width: 45%;
 }
 
+.inner-form-input {
+	position: relative;
+}
+
 .inner-form-input .form-input {
 	padding-left: 0;
 	padding-right: 0;
 	padding-top: 0;
 }
 
+.inner-form-input input {
+	margin-bottom: 35px;
+	box-sizing: border-box;
+}
+
+.inner-form-input .input:last-child input {
+	margin-bottom: 0;
+}
+
+.form-messenger {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+}
+
 .form-messenger textarea {
+	box-sizing: border-box;
+	padding-left: 13px;
 	resize: none;
+	height: 100%;
 	width: 100%;
 	border-top: 0;
 	border-left: 0;
@@ -660,13 +678,14 @@ button {
 
 .contact-button {
 	display: block;
-	margin: 42px auto;
+	margin: 40px auto 0;
 	width: 145px;
 	color: #fff;
 	font-family: 'Open Sans', sans-serif;
 	background: #ff9b51;
 	font-weight: 700;
-	padding: 17px 23px;
+	padding-top: 13px;
+	padding-bottom: 13px;
 	box-sizing: content-box;
 	border-radius: 4px;
 	cursor: pointer;
