--- a/project/homework/assets/css/main.css
+++ b/project/homework/assets/css/main.css
@@ -256,7 +256,7 @@
 
 .inner-effect {
 	float: left;
-	max-width: 476px;
+	width: 53%;
 	margin-right: 0;
 }
 
@@ -285,11 +285,13 @@
 
 .inner-img-effect {
 	float: right;
+	width: 30%;
+	margin-top: 25px;
 }
 
 .img-effect {
-	width: 320px;
-	height: 253px;
+	width: 100%;
+	height: 100%;
 }
 
 /**********************AWESOME********/
@@ -310,7 +312,7 @@
 .after-title::after {
 	content:"";
 	display: block;
-	margin:25px auto 35px;
+	margin:23px auto 35px;
 	height: 2px;	
 	width: 65px;
 	background: #ff8c2c;
@@ -373,7 +375,7 @@
 }
 
 .wrap-pricing-padding {
-	padding-top: 110px;
+	padding-top: 103px;
 	padding-bottom: 95px;
 }
 
@@ -586,6 +588,7 @@
 .stylish {
 	margin-top: 0px;
 	text-align: center;
+	font-size: 36px;
 	color: #fff;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 200;
