--- a/project/homework/assets/css/media.css
+++ b/project/homework/assets/css/media.css
@@ -1,4 +1,4 @@
-@media all and (max-width: 1045px) {
+@media only screen and (max-width: 1045px) {
 	.social-media-content {
 		min-width: 40%;
 	}
@@ -8,7 +8,7 @@
 	}
 }
 
-@media all and (max-width: 950px) {
+@media only screen and (max-width: 950px) {
 	.wrap-header-content {
 		width: 50%;
 	}
@@ -45,7 +45,7 @@
 	}
 }
 
-@media all and (max-width: 800px) {
+@media only screen and (max-width: 800px) {
 	.inner-img-effect {
 		display: none;
 	}	
@@ -55,7 +55,7 @@
 	}
 }
 
-@media all and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
 	.menu-button {
 		display: flex; 
 		align-items: center; 
@@ -235,7 +235,7 @@
 
 	.inner-form-input,
 	.form-messenger {
-		position: static;
+		display: block;
 	}
 
 	.form-messenger {
@@ -262,9 +262,9 @@
 	}
 }
 
-@media all and (max-width: 450px) {
+@media only screen and (max-width: 450px) {
 	.inner-icons {
-		font-size: 	20px;
+		font-size: 	19px;
 		margin-left: 7px;	
 		margin-right: 7px;	
 	}
@@ -280,8 +280,8 @@
 	}
 
 	.inner-footer-icons {
-		margin-left: 10px;	
-		margin-right: 10px;	
+		margin-left: 9px;	
+		margin-right: 9px;	
 	}
 }
 
