--- a/project/homework/assets/less/common/mixins.less
+++ b/project/homework/assets/less/common/mixins.less
@@ -2,3 +2,8 @@
     margin-left: @ml;
     margin-right: @mr;
 }
+
+.font-main(@ff:@font-default, @ta:center) {
+    text-align: @ta;
+    font-family: @ff;
+}
